Fix typo in receive

--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -3602,7 +3602,7 @@ msgid "Hello"
 msgstr "Bonjour"
 
 msgid ""
-"You are recieving this mail because you subscribed to the following "
+"You are receiving this mail because you subscribed to the following "
 "newsletter:"
 msgstr ""
 "Vous recevez ce courriel parce que vous vous êtes abonné à la lettre "
@@ -3625,7 +3625,7 @@ msgid "Click here to unsubscribe."
 msgstr "Cliquer ici pour vous désabonner."
 
 msgid ""
-"You are recieving this mail because you subscribed to getting notifications "
+"You are receiving this mail because you subscribed to getting notifications "
 "on new entries in the following directory:"
 msgstr ""
 "Vous recevez ce courriel parce que vous vous êtes abonné à recevoir des "
