--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -1073,7 +1073,7 @@ msgid "Hello"
 msgstr "Grüezi"
 
 msgid ""
-"You are recieving this mail because you subscribed to the following "
+"You are receiving this mail because you subscribed to the following "
 "newsletter:"
 msgstr ""
 "Sie erhalten diese E-Mail weil Sie sich für den folgenden Newsletter "
@@ -1097,7 +1097,7 @@ msgid "Click here to unsubscribe."
 msgstr "Klicken Sie hier um sich abzumelden."
 
 msgid ""
-"You are recieving this mail because you subscribed to getting notifications "
+"You are receiving this mail because you subscribed to getting notifications "
 "on new entries in the following directory:"
 msgstr ""
 "Sie erhalten diese E-Mail weil Sie sich für Benachrichtigungen über neue "
