--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -4103,6 +4103,13 @@ msgstr "Sélectionnez les catégories de lettres d'information qui vous "
 "intéressent. Vous recevrez la newsletter si elle traite d'au moins une des "
 "catégories souscrites."
 
+msgid "Select categories the newsletter reports on. The users will receive the "
+"newsletter only if it reports on at least one of the categories the user "
+"subscribed to."
+msgstr "Sélectionnez les catégories sur lesquelles la lettre d'information "
+"porte. Les utilisateurs ne recevront la lettre d'information que si elle "
+"concerne au moins l'une des catégories auxquelles l'utilisateur s'est abonné."
+
 msgid "Example for newsletter topics with subtopics in yaml format. "
 "Note: Deeper structures are not supported."
 "\n"
