--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -3609,6 +3609,21 @@ msgstr "Fai clic sul seguente collegamento per confermare l'iscrizione:"
 msgid "Confirm subscription"
 msgstr "Conferma l'Iscrizione"
 
+msgid "Newsletter Subscription"
+msgstr ""
+
+msgid "Update Newsletter Subscription"
+msgstr ""
+
+msgid "Update Subscription"
+msgstr ""
+
+msgid "To update your subscription categories click here:"
+msgstr ""
+
+msgid "Update your newsletter subscription categories:"
+msgstr ""
+
 msgid ""
 "If you did not subscribe to this newsletter you can simply ignore this e-"
 "mail."
