--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1078,7 +1078,22 @@ msgstr "Fai clic sul seguente collegamento per confermare l'iscrizione:"
 
 #, fuzzy
 msgid "Confirm subscription"
-msgstr "Conferma"
+msgstr "Conferma l'Iscrizione"
+
+msgid "Newsletter Subscription"
+msgstr ""
+
+msgid "Update Newsletter Subscription"
+msgstr ""
+
+msgid "Update Subscription"
+msgstr ""
+
+msgid "To update your subscription categories click here:"
+msgstr ""
+
+msgid "Update your newsletter subscription categories:"
+msgstr ""
 
 msgid ""
 "If you did not subscribe to this newsletter you can simply ignore this e-"
