--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-07-25 16:25+0200\n"
+"POT-Creation-Date: 2024-08-20 16:02+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -1895,6 +1895,9 @@ msgstr "Adresse du site internet avec https://"
 msgid "API Key"
 msgstr "clé API"
 
+msgid "Read only"
+msgstr "Lecture seule"
+
 msgid "Submit your event"
 msgstr "Soumettez votre événement"
 
@@ -1944,10 +1947,18 @@ msgstr "Adresse e-mail"
 msgid "Submission Window"
 msgstr "Fenêtre de soumission"
 
+msgid "A submission window with this title already exists."
+msgstr "Une fenêtre de soumission avec ce titre existe déjà."
+
 #, python-format
-msgid "The date range overlaps with an existing submission window (${range})."
+msgid ""
+"The date range overlaps with an existing submission window (${range}). "
+"Either choose a different date range or give this window a title to "
+"differenciate it from other windows."
 msgstr ""
-"La période donnée chevauche une fenêtre de soumission existante (${range})."
+"L'intervalle de dates chevauche une fenêtre de soumission existante "
+"(${range}). Choisissez un autre intervalle de dates ou donnez un titre à "
+"cette fenêtre pour la différencier des autres fenêtres."
 
 msgid "Short name to identify the text module"
 msgstr "Nom court pour identifier le module de texte"
@@ -2209,6 +2220,18 @@ msgstr "Formulaire externe"
 msgid "New external form"
 msgstr "Nouveau formulaire externe"
 
+msgid "Results"
+msgstr "Résultats"
+
+msgid "Do you really want to delete this submission window?"
+msgstr "Voulez-vous vraiment supprimer cette fenêtre de soumission ?"
+
+msgid "Existing submissions will be disassociated."
+msgstr "Les soumissions existantes seront dissociées."
+
+msgid "Delete submission window"
+msgstr "Supprimer la fenêtre de soumission"
+
 msgid "Do you really want to delete this survey?"
 msgstr "Voulez-vous vraiment supprimer ce sondage ?"
 
@@ -2218,9 +2241,6 @@ msgstr ""
 
 msgid "Delete survey"
 msgstr "Supprimer le sondage"
-
-msgid "Results"
-msgstr "Résultats"
 
 msgid "Submission Windows"
 msgstr "Fenêtres de soumission"
@@ -2809,8 +2829,8 @@ msgstr "Refuser ${title} est irréversible."
 msgid "Reject reservation"
 msgstr "Refuser la réservation"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Événement"
 
@@ -3015,9 +3035,6 @@ msgstr "Clés d'application"
 msgid "Key"
 msgstr "Clé"
 
-msgid "Read only"
-msgstr "Lecture seule"
-
 msgid "Last used"
 msgstr "Dernière utilisation"
 
@@ -3145,8 +3162,8 @@ msgid ""
 "filled-out form."
 msgstr ""
 "Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
-"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
-"« Modifier » pour retourner sur le formulaire complété."
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
+"Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
 "The image shown in the list view is a square. To have your image shown fully "
@@ -5190,9 +5207,6 @@ msgstr ""
 msgid "Do you really want to delete this registration window?"
 msgstr "Voulez-vous vraiment supprimer cette fenêtre d'inscription?"
 
-msgid "Existing submissions will be disassociated."
-msgstr "Les soumissions existantes seront dissociées."
-
 msgid "Delete registration window"
 msgstr "Supprimer la fenêtre d'enregistrement"
 
@@ -5709,6 +5723,21 @@ msgstr "Chat"
 msgid "Topics"
 msgstr "Sujets"
 
+msgid "A survey with this name already exists"
+msgstr "Une enquête avec ce nom existe déjà"
+
+msgid "Added a new survey"
+msgstr "Ajout d'une nouvelle enquête"
+
+msgid "New Survey"
+msgstr "Nouvelle enquête"
+
+msgid "Please choose a submission window"
+msgstr "Veuillez choisir une fenêtre de soumission"
+
+msgid "Exports the submissions of the survey."
+msgstr "Exporte les soumissions de l'enquête."
+
 msgid "The survey timeframe has ended"
 msgstr "La période de l'enquête est terminée"
 
@@ -5720,18 +5749,6 @@ msgstr "La période d'enquête s'ouvre le ${day}, ${date}"
 msgid "The survey timeframe closes on ${day}, ${date}"
 msgstr "La période d'enquête se termine le ${day}, ${date}"
 
-msgid "A survey with this name already exists"
-msgstr "Une enquête avec ce nom existe déjà"
-
-msgid "Added a new survey"
-msgstr "Ajout d'une nouvelle enquête"
-
-msgid "New Survey"
-msgstr "Nouvelle enquête"
-
-msgid "Exports the submissions of the survey."
-msgstr "Exporte les soumissions de l'enquête."
-
 msgid "New Submission Window"
 msgstr "Nouvelle fenêtre de soumission"
 
@@ -5739,12 +5756,6 @@ msgid "Submissions windows limit survey submissions to a specific time-range."
 msgstr ""
 "Les fenêtres de soumission limitent les soumissions d'enquêtes à une période "
 "spécifique."
-
-msgid "Do you really want to delete this submission window?"
-msgstr "Voulez-vous vraiment supprimer cette fenêtre de soumission ?"
-
-msgid "Delete submission window"
-msgstr "Supprimer la fenêtre de soumission"
 
 msgid "Edit Submission Window"
 msgstr "Modifier la fenêtre de soumission"
@@ -5970,6 +5981,13 @@ msgstr "Un compte a été créé pour vous"
 
 msgid "The user was created successfully"
 msgstr "L'utilisateur a bien été créé"
+
+#, python-format
+#~ msgid ""
+#~ "The date range overlaps with an existing submission window (${range})."
+#~ msgstr ""
+#~ "La période donnée chevauche une fenêtre de soumission existante "
+#~ "(${range})."
 
 #~ msgid "Phone number"
 #~ msgstr "Numéro de téléphone"
