--- a/src/onegov/swissvotes/locale/en_US/LC_MESSAGES/onegov.swissvotes.po
+++ b/src/onegov/swissvotes/locale/en_US/LC_MESSAGES/onegov.swissvotes.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-08-08 12:56+0200\n"
+"POT-Creation-Date: 2024-08-28 14:18+0200\n"
 "PO-Revision-Date: 2021-01-07 09:11+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -134,6 +134,9 @@ msgstr "Codebook for the post-vote poll (XLSX)"
 
 msgid "Technical report on the VOX poll"
 msgstr "Technical report on the VOX poll"
+
+msgid "Results of the LeeWas post-vote poll"
+msgstr "Results of the LeeWas post-vote poll"
 
 msgid "Updating the external resources may take some time."
 msgstr "Updating the external resources may take some time."
